# NanoCodeAgent

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_zh.md  build.sh
.agent/skills/: cpp_engineering_rules.md
.agents/skills/doc-clarity-reviewer/: SKILL.md
.agents/skills/docgen-change-impact/: SKILL.md
.agents/skills/docgen-fact-check/: SKILL.md
.agents/skills/docgen-overview-writer/: SKILL.md
.agents/skills/docgen-readme-patch/: SKILL.md
.agents/skills/docgen-repo-understanding/: SKILL.md
.agents/skills/docgen-reviewer/: SKILL.md
.agents/skills/docgen-tutorial-update/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: cpp_engineering_rules.instructions.md  git_commit_rules.instructions.md
.github/workflows/: core-ci.yml  docgen.yml  docs-validate.yml  pages.yml
book/: book.toml  mermaid-init.js
book/src/: 00-preface.md  01-overview.md  02-cli-config-workspace.md  02-setup.md  02-testing.md  03-architecture.md  03-http-llm-streaming.md  04-tool-calling.md  04-tools-and-safety.md  05-http-llm.md  05-testing.md  06-documentation-automation.md  06-file-tools.md  07-bash-tool.md  08-config-logging.md  99-changelog.md  SUMMARY.md
docs/: docgen_e2e_flow.md  documentation-collaboration-style.md
docs/templates/: README.md  change_impact_template.md  diagram-gallery.md  diagram-spec-template.md  feature_update_template.md  release_note_template.md  troubleshooting_template.md  tutorial_template.md
include/: agent_loop.hpp  agent_tools.hpp  agent_utils.hpp  build_test_tools.hpp  cli.hpp  config.hpp  docgen_llm.hpp  docgen_pipeline.hpp  docgen_types.hpp  llm.hpp  logger.hpp  process_env.hpp  repo_tools.hpp  tool_registry.hpp
scripts/docgen/: README.md  change_facts.py  changed_context.py  doc_inventory.py  example_inventory.py  generate_candidates.py  generate_impact_report.py  missing_diagram_specs.py  path_utils.py  reference_context.py  render_docgen_e2e_summary.py  repo_map.py  run_change_impact.sh  run_docgen_e2e.sh  run_docgen_e2e_closed.sh  run_docgen_e2e_loop.py  run_docgen_verify.sh  run_repo_understanding.sh  run_review_report.py  run_validation_report.py  run_verify_report.py  setup.sh  verify_commands.py  verify_diagram_specs.py  verify_doc_consistency.py  verify_links.py  verify_mermaid.py  verify_paths.py
scripts/docgen/tasks/: README.md  ai_diagram_spec_backfill.md  ai_doc_restructure_or_update.md  ai_doc_scope_decision.md  ai_review.md  ai_review_rework.md  ai_verify_repair.md
scripts/docs/: validate_docs.py
src/: agent_loop.cpp  agent_tools.cpp  agent_utils.cpp  bash_tool.cpp  build_test_tools.cpp  cli.cpp  config.cpp  docgen_llm.cpp  docgen_pipeline.cpp  llm.cpp  logger.cpp  main.cpp  repo_tools.cpp  tool_registry.cpp
tests/: CMakeLists.txt  test_agent_loop_limits.cpp  test_agent_mock_e2e.cpp  test_build_test_tools.cpp  test_cli.cpp  test_docgen_change_impact.py  test_docgen_e2e.py  test_docgen_e2e_loop.py  test_docgen_style_module.py  test_docgen_types.cpp  test_docgen_verify.py  test_docgen_verify_consistency_links.py  test_llm_parse.cpp  test_llm_stream.cpp  test_net_smoke.cpp  test_repo_tools.cpp  test_schema_and_args_tolerance.cpp  test_stream_robustness.cpp  test_tool_registry.cpp
tests/fixtures/: ci_doc_scope.json
tests/fixtures/ci_diagram_specs/book__src__01-overview/: block-01.md  block-02.md
tests/fixtures/ci_diagram_specs/book__src__03-http-llm-streaming/: block-01.md
tests/fixtures/ci_diagram_specs/book__src__04-tools-and-safety/: block-01.md
tests/fixtures/ci_diagram_specs/book__src__05-testing/: block-01.md  block-02.md  block-03.md
tests/fixtures/ci_diagram_specs/book__src__06-documentation-automation/: block-01.md
tests/fixtures/docgen/: absolute_backtick_path.md  absolute_backtick_path_with_spaces.md  absolute_link_path.md  bad_backtick_path_with_spaces.md  bad_commands.md  bad_consistency_links.md  bad_consistency_special.md  bad_console_commands.md  bad_duplicate_anchors.md  bad_links.md  bad_paths.md  bare_code_mentions.md  external_uri_links.md  file_uri_link.md  good.md  good_console_commands.md  good_console_heredoc_commands.md  good_duplicate_anchors.md  missing_root_path.md  relative_backtick_path_with_spaces.md  repo_escape_link.md  windows_absolute_backtick_path.md  windows_absolute_link_path.md
tests/fixtures/docgen/change_impact/: case_a_changed_files.txt  case_b_changed_files.txt  case_c_changed_files.txt
tests/fixtures/docgen/e2e/: minimal_impact_report.md
tests/fixtures/docgen/space dir/: existing.md
tools/docgen/: docgen.py  generate.sh
